WebKit2: Implement plugin quirk for Mozilla user agent for older Flash https://bugs.webkit.org/show_bug.cgi?id=60726 <rdar://problem/8470824>

Reviewed by Adam Roben.

Implement the quirk for versions of Flash before v10 that only request windowless plugins
if we use a Mozilla user agent.

* Shared/Plugins/Netscape/win/NetscapePluginModuleWin.cpp:
(WebKit::NetscapePluginModule::determineQuirks): If we have a plugin that handles the
    "application/x-shockwave-flash" MIME type with a version less than 10, tell it to use
    the Mozilla user agent.
* Shared/Plugins/PluginQuirks.h:
* WebProcess/Plugins/Netscape/NetscapePlugin.cpp:
(WebKit::NetscapePlugin::userAgent): Add an early return if the plugin uses the Mozilla user
    agent.
* win/WebKit2.vcproj: Add PluginQuirks.h.



Canonical link: https://commits.webkit.org/76037@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86380 268f45cc-cd09-0410-ab3c-d52691b4dbfc